base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-launchpad
  labels:
    app.kubernetes.io/name: platform-launchpad
    app.kubernetes.io/part-of: platform-launchpad
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
