base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-launchpad
  namespace: platform-launchpad
  labels:
    app.kubernetes.io/name: platform-launchpad
    app.kubernetes.io/part-of: platform-launchpad
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:201854077833:certificate/2b0a0d60-b0be-4186-b52a-b207018ba58c"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb

  rules:
    - host: launchpad.christineadelusi.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /redoc
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /openapi.json
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
